# AnkiTemplateDesigner

./: .coverage  .gitignore  ANALYSIS-STATUS.md  ANKI-COMMAND-LINE-TEST-RESULTS.md  ANKI-LAUNCH-VERIFICATION.md  AUDIT-COMPLETE.md  AUDIT-COMPLETION-FINAL.md  AUDIT-DETAILED-FINDINGS.md  AUDIT-EXECUTIVE-SUMMARY.md  AUDIT-SUMMARY-2026.md  BEHAVIORS-LOADING-FIX.md  BLOCK-COMPONENTS-DOCUMENTATION.md  BLOCK-REGISTRATION-COMPLETE.md  BLOCKS-DEBUGGING-GUIDE.md  BLOCKS-FIX-SUMMARY.md  BROKEN-IMPORTS-DETAILED-REFERENCE.md  CHANGELOG.md  CODE-CLEANUP-COMPLETION-SUMMARY.md  CODE-CLEANUP-QUICK-REFERENCE.md  CODE-REVIEW-CLEAN-CODE-SOLID.md  CODE-REVIEW-SESSION-SUMMARY.md  COLLABORATION-REMOVAL-SUMMARY.md  COMPLETE-STATUS-REPORT-JAN-2026.md  COMPONENT-ANALYSIS-ANKI.md  COMPONENT-IMPLEMENTATION-SUMMARY.md  COMPONENTS-FIX-SUMMARY.md  COMPREHENSIVE-UI-AUDIT-2026.md  CRITICAL-UI-ISSUES.md  CURRENT-PROJECT-STATUS.md  DEBUG-CHECKLIST.md  DEBUG-TESTING-INSTRUCTIONS.md  DEBUGGING-GUIDE.md  DELIVERY-SUMMARY-QT-FIXES.md  DEPLOYMENT-READINESS-ASSESSMENT.md  DETAILED-UI-UX-ANALYSIS.md  DOCUMENTATION-INDEX.md  ENHANCED-DEBUG-CAPTURE.md  EXECUTIVE-SUMMARY-JAN-2026.md  EXTENDED-UX-ANALYSIS-PHASE4-DEEP-DIVE.md  FEATURE-COMPLETENESS-AUDIT.md  (+204 more)
MIGRATION-PLANS/: 00-MIGRATION-OVERVIEW.md  01-FOUNDATION-SETUP.md  02-CORE-ADDON-ENTRY.md  03-DIALOG-SYSTEM.md  04-WEBVIEW-BRIDGE.md  05-BASIC-UI-SHELL.md  06-TEMPLATE-SERVICE.md  07-UNDO-REDO-SYSTEM.md  08-ERROR-HANDLING.md  09-LOGGING-SYSTEM.md  10-CONFIGURATION.md  11-ANKI-INTEGRATION.md  12-SELECTION-MANAGER.md  13-PERFORMANCE-OPTIMIZER.md  14-BACKUP-MANAGER.md  (+17 more)
(+620 files in other folders)
